# EcoTask-contract

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
contracts/eco-token/: Cargo.toml
contracts/eco-token/src/: lib.rs  storage.rs  token.rs
contracts/reward-engine/: Cargo.toml
contracts/reward-engine/src/: lib.rs  storage.rs  verification.rs
contracts/reward-engine/test_snapshots/verification/test/: test_dispute_flow.1.json  test_double_approve_fails.1.json  test_full_integration.1.json  test_resolved_not_in_pending_list.1.json  test_submit_and_approve.1.json  test_submit_and_reject.1.json  test_unauthorized_oracle_cannot_submit.1.json
contracts/reward-engine/tests/: full_lifecycle_test.rs
contracts/task-registry/: Cargo.toml
contracts/task-registry/src/: access.rs  lib.rs  registry.rs  storage.rs
contracts/task-registry/test_snapshots/registry/test/: test_add_sponsor.1.json  test_cancel_already_completed_task.1.json  test_cancel_task_by_creator.1.json  test_cancel_task_not_creator.1.json  test_complete_cancelled_task.1.json  test_complete_task.1.json  test_create_and_get_task.1.json  test_double_claim_prevention.1.json  test_expire_already_expired_task.1.json  test_expire_cancelled_task.1.json  test_expire_task.1.json  test_expired_task_cannot_be_completed.1.json  test_get_tasks_by_creator.1.json  (+5 more)
scripts/: deploy.sh  integration-test.sh  invoke.sh  verify-deploy.sh
tests/: reward_integration_test.rs
