[package]
name = "reward-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "26.0.1"
eco-token = { path = "../eco-token" }
task-registry = { path = "../task-registry" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
